fix auth, postman auth & swagger auth
