# app/Http/Controllers/ReceiptsController.php
@@ -5,13 +5,53 @@ namespace App\Http\Controllers;
 use App\Models\Receipts;
 use Illuminate\Http\Request;
 use Illuminate\Http\UploadedFile;
+use Illuminate\Support\Facades\Auth;
 
 class ReceiptsController extends Controller
 {
+    /**
+     * @OA\Post(
+     *     path="/api/receipts/add",
+     *     summary="Upload receipts",
+     *     security={{"bearer_token":{}}},
+     *     tags={"Receipts"},
+     *     description="Метод для загрузки и сохранения квитанций.",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 required={"receipt"},
+     *                 @OA\Property(
+     *                     property="receipt",
+     *                     type="array",
+     *                     @OA\Items(type="string", format="binary"),
+     *                     description="Массив файлов квитанций для загрузки"
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Receipt(s) uploaded successfully",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Receipt(s) uploaded successfully")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="No receipt uploaded",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="No receipt uploaded")
+     *         )
+     *     ),
+     * )
+     */
     public function store(Request $request)
     {
         if ($request->hasFile('receipt')) {
-            $user = $request->user();
+            $user = Auth::user();
 
             if ($request->file('receipt') instanceof UploadedFile) {
                 $receipts = [$request->file('receipt')];
@@ -20,11 +60,11 @@ class ReceiptsController extends Controller
             }
 
             foreach ($receipts as $receipt) {
-                $userDirectory = 'receipts/' . $user->id;
+                $userDirectory = 'public/receipts';
                 $imagePath = $receipt->store($userDirectory);
 
                 $image = new Receipts();
-                $image->image_path = $imagePath;
+                $image->image_path = str_replace('public/', '', $imagePath);
                 $image->user_id = $user->id;
                 $image->processed = false;
                 $image->error = false;
